# data-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_FASTMCP.md  config.py  example.py  mcp.json  mcp.yml  mcp_server.py  my_client.py  pyproject.toml  reflection log - Agentic_loop_exited_after_reaching_max_l_20250704_194714.json  reflection log - Agentic_loop_exited_after_reaching_max_l_20250704_194736.json
.github/workflows/: ci.yml  integration-batch.yml
aws/: athena_client.py  compute_streams_clients.py  data_clients.py  dynamo_client.py  emr_client.py  firehose_client.py  glue_client.py  kinesis_client.py  lambda_client.py  redshift_data_client.py  s3_client.py  secretsmanager_client.py  ssm_client.py  stepfunctions_client.py  sts_client.py
backend/: __init__.py  self_learning_api.py
coding_agent/: __init__.py  agent.py  mcp.py  utils.py
docs/: CLOUD_INFRA_PLANS.md  INFRA_PLAN.md  README.md  TODO.md
docs/agent/: MCP_PLAN.md  REPO_STRUCTURE.md
gcp/: bigquery_client.py  iam_client.py  pubsub_client.py  secret_manager_client.py  storage_client.py
infra/: README.md
infra/ci/: create_ci_resources.sh  (+1 more)
log/: reflection log - Agentic_loop_exited_after_reaching_max_l_20250704_194931.json  reflection log - Agentic_loop_exited_after_reaching_max_l_20250704_194932.json  reflection log - Agentic_loop_exited_after_reaching_max_l_20250704_195001.json
tests/: remove_folders.py  test_agent.py  test_agentic_loop.py  test_aws_clients.py  test_batch_runner.py  test_playwright_mcp.py  test_self_learning.py
tools/: run_local.py  runner.py
(+13 files in other folders)
